--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
         "typescript-eslint": "^8.3.0",
         "vite": "^5.4.2"
     },
-    "homepage": "https://YOUR_USERNAME.github.io/ejs-live-preview"
+    "homepage": "https://gihanrangana.github.io/ejs-live-preview"
 }
