--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "copy-workers": "node copy-monaco-workers.cjs",
+        "prebuild": "npm run copy-workers",
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview",
@@ -13,13 +15,16 @@
     },
     "dependencies": {
         "@monaco-editor/react": "^4.7.0",
+        "ejs": "^3.1.10",
         "lucide-react": "^0.344.0",
         "monaco-editor": "^0.52.2",
+        "monaco-tailwindcss": "^0.6.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
+        "@types/ejs": "^3.1.5",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
@@ -31,6 +36,7 @@
         "globals": "^15.9.0",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.3.0",
         "vite": "^5.4.2"
